mud-references/deadsouls/ds3.9/ds3.9/fluffos-2.23-ds03/build_ds3.9_fluffos_afterpatch.log
gmake main_build2
gmake[1]: Entering directory '/home/thurtea/amlp-aethermud/mud-references/deadsouls/ds3.9/ds3.9/fluffos-2.23-ds03'
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/main.o -c main.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/rc.o -c rc.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/interpret.o -c interpret.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/simulate.o -c simulate.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/file.o -c file.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/object.o -c object.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/backend.o -c backend.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/array.o -c array.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/mapping.o -c mapping.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/comm.o -c comm.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/ed.o -c ed.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/regexp.o -c regexp.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/buffer.o -c buffer.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/crc32.o -c crc32.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/malloc.o -c malloc.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/mallocwrapper.o -c mallocwrapper.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/class.o -c class.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/efuns_main.o -c efuns_main.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/efuns_port.o -c efuns_port.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/call_out.o -c call_out.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/otable.o -c otable.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/dumpstat.o -c dumpstat.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/stralloc.o -c stralloc.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/port.o -c port.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/reclaim.o -c reclaim.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/parse.o -c parse.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/simul_efun.o -c simul_efun.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/sprintf.o -c sprintf.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/program.o -c program.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/compiler.o -c compiler.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/avltree.o -c avltree.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/icode.o -c icode.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/trees.o -c trees.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/generate.o -c generate.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/scratchpad.o -c scratchpad.c
scratchpad.c: In function ‘scratch_copy’:
scratchpad.c:53:23: warning: ‘strcpy’ writing 1 or more bytes into a region of size 0 overflows the destination [-Wstringop-overflow=]
   53 | #define Strcpy(x, y) (strcpy((char *)x, (char *)y))
      |                      ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
scratchpad.c:130:5: note: in expansion of macro ‘Strcpy’
  130 |     Strcpy(to, str);
      |     ^~~~~~
In file included from scratchpad.c:4:
scratchpad.h:24:10: note: at offset 2 into destination object ‘block’ of size 2
   24 |     char block[2]; /* block[0] must be nonzero, usually SCRATCH_MAGIC */
      |          ^~~~~
scratchpad.c: In function ‘scratch_realloc’:
scratchpad.c:190:14: warning: ‘strcpy’ writing 1 or more bytes into a region of size 0 overflows the destination [-Wstringop-overflow=]
  190 |              strcpy(res, ptr);
      |              ^~~~~~~~~~~~~~~~
scratchpad.h:24:10: note: at offset 2 into destination object ‘block’ of size 2
   24 |     char block[2]; /* block[0] must be nonzero, usually SCRATCH_MAGIC */
      |          ^~~~~
scratchpad.c:221:14: warning: ‘strcpy’ writing 1 or more bytes into a region of size 0 overflows the destination [-Wstringop-overflow=]
  221 |              strcpy(res, ptr);
      |              ^~~~~~~~~~~~~~~~
scratchpad.h:24:10: note: at offset 2 into destination object ‘block’ of size 2
   24 |     char block[2]; /* block[0] must be nonzero, usually SCRATCH_MAGIC */
      |          ^~~~~
scratchpad.c: In function ‘scratch_join’:
scratchpad.c:271:13: warning: ‘strcpy’ writing 1 or more bytes into a region of size 0 overflows the destination [-Wstringop-overflow=]
  271 |             strcpy(ret, s1);
      |             ^~~~~~~~~~~~~~~
scratchpad.h:24:10: note: at offset 2 into destination object ‘block’ of size 2
   24 |     char block[2]; /* block[0] must be nonzero, usually SCRATCH_MAGIC */
      |          ^~~~~
scratchpad.c: In function ‘scratch_copy_string’:
scratchpad.c:53:23: warning: ‘strcpy’ writing 1 or more bytes into a region of size 0 overflows the destination [-Wstringop-overflow=]
   53 | #define Strcpy(x, y) (strcpy((char *)x, (char *)y))
      |                      ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
scratchpad.c:308:17: note: in expansion of macro ‘Strcpy’
  308 |                 Strcpy(res, scr_tail + 1);
      |                 ^~~~~~
scratchpad.h:24:10: note: at offset 2 into destination object ‘block’ of size 2
   24 |     char block[2]; /* block[0] must be nonzero, usually SCRATCH_MAGIC */
      |          ^~~~~
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/socket_efuns.o -c socket_efuns.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/socket_ctrl.o -c socket_ctrl.c
gcc -D__USE_FIXED_PROTOTYPES__ -O2 -o obj/qsort.o -c qsort.c
qsort.c:33:13: error: conflicting types for ‘qSort’; have ‘void(void *, int,  int,  int,  int,  int (*)(void *, void *))’
   33 | static void qSort(void *v, int left, int right, int size, int rightmost, int (*compar) (void *, void *))
      |             ^~~~~
qsort.c:17:13: note: previous declaration of ‘qSort’ with type ‘void(void *, int,  int,  int,  int,  int (*)(void))’
   17 | static void qSort (void *, int, int, int, int, int (*) ());
      |             ^~~~~
gmake[1]: *** [GNUmakefile:91: obj/qsort.o] Error 1
gmake[1]: Leaving directory '/home/thurtea/amlp-aethermud/mud-references/deadsouls/ds3.9/ds3.9/fluffos-2.23-ds03'
make: *** [GNUmakefile:84: main_build] Error 2
